# previewqt

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DONATIONS.md  INSTALL  INSTALL.md  README  README.md  org.photoqt.PreviewQt.metainfo.xml  org.previewqt.PreviewQt.metainfo.xml  windowsicons.rc
CMake/: ComposeDesktopFile.cmake  FindLibsai.cmake  ListFilesCPlusPlus.cmake  ListFilesQML.cmake
cplusplus/: main.cpp
cplusplus/files/: pqc_filehandler.cpp  pqc_imageproviderfull.cpp  pqc_imageprovidersvg.cpp  pqc_loadfile.cpp  pqc_providerfull.cpp  pqc_providersvg.cpp
cplusplus/files/plugins/: pqc_fileplugin.cpp  pqc_fileplugin_audio.cpp  pqc_fileplugin_devil.cpp  pqc_fileplugin_ebook.cpp  pqc_fileplugin_libarchive.cpp  pqc_fileplugin_libraw.cpp  pqc_fileplugin_libsai.cpp  pqc_fileplugin_libvips.cpp  pqc_fileplugin_magick.cpp  pqc_fileplugin_pdf.cpp  pqc_fileplugin_qt.cpp  pqc_fileplugin_resvg.cpp  pqc_fileplugin_text.cpp  pqc_fileplugin_video.cpp  pqc_loadfile_archive.cpp  pqc_loadfile_devil.cpp  pqc_loadfile_freeimage.cpp  pqc_loadfile_libvips.cpp  pqc_loadfile_magick.cpp  pqc_loadfile_poppler.cpp  pqc_loadfile_qt.cpp  pqc_loadfile_qtpdf.cpp  pqc_loadfile_raw.cpp  pqc_loadfile_resvg.cpp  pqc_loadfile_video.cpp  pqc_loadfile_xcf.cpp
cplusplus/header/: pqc_cache.h  pqc_configfiles.h  pqc_constants.h  pqc_fileformats.h  pqc_filehandler.h  pqc_filehandler_qml.h  pqc_imageformats.h  pqc_imageproviderfull.h  pqc_imageprovidersvg.h  pqc_loadfile.h  pqc_loadfile_archive.h  pqc_loadfile_devil.h  pqc_loadfile_freeimage.h  pqc_loadfile_libvips.h  pqc_loadfile_magick.h  pqc_loadfile_poppler.h  pqc_loadfile_qt.h  pqc_loadfile_qtpdf.h  pqc_loadfile_raw.h  pqc_loadfile_resvg.h  pqc_loadfile_video.h  pqc_loadfile_xcf.h  pqc_loadimage.h  pqc_loadimage_archive.h  pqc_loadimage_devil.h  pqc_loadimage_freeimage.h  pqc_loadimage_libvips.h  pqc_loadimage_magick.h  pqc_loadimage_poppler.h  pqc_loadimage_qt.h  pqc_loadimage_qtpdf.h  pqc_loadimage_raw.h  pqc_loadimage_resvg.h  pqc_loadimage_unrar.h  pqc_loadimage_video.h  pqc_loadimage_xcf.h  pqc_messagehandler.h  pqc_mpvobject.h  pqc_mpvqthelper.h  pqc_notify.h  (+44 more)
cplusplus/header/fileplugins/: pqc_fileplugin.h  pqc_fileplugin_audio.h  pqc_fileplugin_devil.h  pqc_fileplugin_ebook.h  pqc_fileplugin_libarchive.h  pqc_fileplugin_libraw.h  pqc_fileplugin_libsai.h  pqc_fileplugin_libvips.h  pqc_fileplugin_magick.h  pqc_fileplugin_pdf.h  pqc_fileplugin_qt.h  pqc_fileplugin_resvg.h  pqc_fileplugin_text.h  pqc_fileplugin_video.h
cplusplus/images/: pqc_loadimage.cpp  pqc_providerfull.cpp  pqc_providersvg.cpp  vqc_loadimage.cpp  vqc_providerfull.cpp
cplusplus/images/plugins/: pqc_loadimage_archive.cpp  pqc_loadimage_devil.cpp  pqc_loadimage_freeimage.cpp  pqc_loadimage_libvips.cpp  pqc_loadimage_magick.cpp  pqc_loadimage_poppler.cpp  pqc_loadimage_qt.cpp  pqc_loadimage_qtpdf.cpp  pqc_loadimage_raw.cpp  pqc_loadimage_resvg.cpp  pqc_loadimage_unrar.cpp  pqc_loadimage_video.cpp  pqc_loadimage_xcf.cpp  vqc_loadimage_archive.cpp  vqc_loadimage_devil.cpp  vqc_loadimage_freeimage.cpp  vqc_loadimage_libvips.cpp  vqc_loadimage_magick.cpp  vqc_loadimage_poppler.cpp  vqc_loadimage_qt.cpp  vqc_loadimage_qtpdf.cpp  vqc_loadimage_raw.cpp  vqc_loadimage_resvg.cpp  vqc_loadimage_unrar.cpp  vqc_loadimage_video.cpp  vqc_loadimage_xcf.cpp
cplusplus/other/: pqc_mpvobject.cpp  pqc_photosphere.cpp  pqc_photosphereitem.cpp  pqc_photosphererenderer.cpp  pqc_singleinstance.cpp  pqc_specialactions.cpp  vqc_mpvobject.cpp
cplusplus/singletons/: pqc_cache.cpp  pqc_fileformats.cpp  pqc_imageformats.cpp  pqc_scripts.cpp  pqc_scriptsconfig.cpp  pqc_scriptsexternaltools.cpp  pqc_scriptsfilespaths.cpp  pqc_scriptsimages.cpp  pqc_scriptsother.cpp  pqc_scriptsspecificactions.cpp  pqc_settings.cpp  pqc_textprocessing.cpp  vqc_imageformats.cpp  vqc_scripts.cpp
img/: filetypes.qrc  img.qrc
lang/: photoqt_de_DE.ts  previewqt_de_DE.ts
misc/: fileformats.db  generate.py  imageformats.db  misc.qrc
misc/icons/: iconcolors.db
previewqtremote/: CMakeLists.txt  Main.qml  PQMainWindow.qml  PQSettings.qml  main.cpp  org.previewqt.PreviewQtRemote.metainfo.xml  scripts.cpp  scripts.h
previewqtremote/CMake/: ComposeDesktopFile.cmake
qml/: PQMainWindow.qml  VQMainWindow.qml
qml/components/: PQAbout.qml  PQIconButton.qml  PQImage.qml  PQSettings.qml  PQTopRow.qml  PQTrayIcon.qml
qml/components/imageitems/: PQArchive.qml  PQAudio.qml  PQDocument.qml  PQEPUB.qml  PQImageAnimated.qml  PQImageNormal.qml  PQPhotoSphere.qml  PQSVG.qml  PQTxt.qml  PQURL.qml  PQVideoMpv.qml  PQVideoQt.qml
qml/components/imageitems/components/: PQMotionPhotoMpv.qml  PQMotionPhotoQt.qml
qml/components/imageitems/dummy/: PQEPUB.qml  PQMotionPhotoQt.qml  PQVideoMpv.qml  PQVideoQt.qml
qml/components/parts/: PQTopRowDownloadButton.qml  PQWebsiteView.qml
qml/components/parts/dummy/: PQWebsiteView.qml
qml/elements/: PQIconButton.qml
qml/windows/: PQAbout.qml  PQEnterPathUrl.qml  PQHelp.qml  PQMediaInfo.qml  PQSettings.qml  PQWelcome.qml
qml/windows/settings/: PQSettingsExternalApplications.qml  PQSettingsGeneral.qml  PQSettingsTools.qml
windows/: FileAssociation.nsh  previewqt-portable-setup.nsi  previewqt-setup.nsi
